@@ -1,3 +1,8 @@
+2007-06-14  Dave Morrison  <drm@finkproject.org>
+
+	* Services.pm: fix possible undefined hash key; be more forgiving (and 
+	smarter) about the version-string we return (backport from HEAD)
+
 2007-06-12  Daniel Macks  <dmacks@netspace.org>
 
 	* Engine.pm: Don't try to validate dummy packages without info file (backport from HEAD).	
